[project]
name = "ankiforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "langchain>=1.3.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "typer>=0.26.2",
]
[project.scripts]
ankiforge = "app.main:app"
[tool.setuptools.packages.find]
include = ["app*"]
